trying to fix my font stacks on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -73,52 +73,47 @@
     font-size: 64px;
     line-height: 80px;
     letter-spacing: 0.48px;
-    font-family: "SF Pro Display";
   }
   .text-xxxl{
     font-size: 48px;
     line-height: 64px;
     letter-spacing: 0.48px;
-    font-family: "SF Pro Display";
   }
   .text-xxl{
     font-size: 36px;
     line-height: 48px;
     letter-spacing: 0.48px;
-    font-family: "SF Pro Display";
   }
   .text-xl{
     font-size: 28px;
     line-height: 36px;
     letter-spacing: 0.36px;
-    font-family: "SF Pro Display";
   }
   .text-l{
     font-size: 20px;
     line-height: 28px;
     letter-spacing: -0.28px;
-    font-family: "SF Pro Display";
   }
   .text-body{
     font-size: 16px;
     line-height: 20px;
     letter-spacing: -0.13px;
-    font-family: "SF Pro Display";
   }
   .text-s{
     font-size: 14px;
     line-height: 20px;
     letter-spacing: -0.15px;
-    font-family: "SF Pro Display";
   }
 
   .header {
     color: var(--gray-80);
     font-weight: 800;
+    font-family: "SF Pro Display", -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   }
   .subheader {
     color: var(--gray-70);
     font-weight: 800;
+    font-family: "SF Pro Display", -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   }
 
   a {
